--- a/src/pages/news-item/components/comments/styles.module.css
+++ b/src/pages/news-item/components/comments/styles.module.css
@@ -1,5 +1,10 @@
 .author {
     opacity: 50%;
+    padding: 6px;
+}
+
+.wrapAuthor {
+    display: flex;
 }
 
 .commentWrap {
@@ -8,4 +13,8 @@
 
 .commentWrap:hover {
     background-color: rgba(202, 208, 209, 0.22);
+}
+
+.nestedComment {
+    padding-left: 20px;
 }
